<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/app_menu_info"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/list_app_info" />
    <item
        android:id="@+id/app_menu_favorite"
        android:icon="@drawable/baseline_favorite_border_24"
        android:title="@string/list_app_favorite_add" />
    <item
        android:id="@+id/app_menu_hidden"
        android:icon="@drawable/baseline_visibility_off_24"
        android:title="@string/list_app_hidden_add" />
    <item
        android:id="@+id/app_menu_rename"
        android:icon="@drawable/baseline_edit_24"
        android:title="@string/list_app_rename" />
    <item
        android:id="@+id/app_menu_delete"
        android:icon="@drawable/baseline_delete_forever_24"
        android:title="@string/list_app_delete" />
</menu>
